# trading_game

./: .coverage  .gitignore  Dockerfile  README.md  Taskfile.yml  pyproject.toml  pytest.ini
.cursor/rules/: mentor.mdc
.github/workflows/: ci.yml
.test-reports/: test_report_20250920_154740.html  test_stock_20250920_154905.html
app/: game.py  main.py  scripts.py
app/config/: stock_config.py
app/factories/: stock_factory.py
app/models/: player.py  stock.py
app/ui/: components.py  game_interface.py  layout.py
app/utils/: constants.py  randomness_development.py
test_reports/: test_stock_20250922_173125.html
tests/: test_layout.py  test_player.py  test_stock.py  test_stock_factory.py
