[project]
name = "trading-game"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.1.0",
    "loguru>=0.7.3",
    "pandas>=2.3.2",
    "pytest>=8.4.2",
    "pytest-cov>=6.0.0",
    "rich>=14.1.0",
]

[project.scripts]
trading-game = "app.main:main"
test = "app.scripts:run_tests"
test-stock = "app.scripts:run_stock_tests"
test-player = "app.scripts:run_player_tests"
demo-stock = "app.scripts:demo_stock"
demo-game ="app.game:run_game"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

