[project]
name = "trading-game"
version = "0.1.0"
description = "A trading game"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich>=13.0.0",
    "loguru>=0.7.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
trading-game = "app.main:main"
test = "app.scripts:run_tests"
test-stock = "app.scripts:run_stock_tests"
test-player = "app.scripts:run_player_tests"
demo-stock = "app.scripts:demo_stock"
demo-game ="app.game:run_game"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-html>=4.0.0",  # HTML-raportit
    "pytest-xdist>=3.0.0",  # Rinnakkaistestaus
    "pytest-mock>=3.10.0",  # Mock-objektit
    "pytest-clarity>=1.0.0",  # Paremmat virheilmoitukset
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["test_reports*", "tests*"]

